tests/invalid/typeclass_test_13.err_exp
typeclass_test_13.m:038: In clause for predicate
typeclass_test_13.m:038:   `mercury_format_pragma_foreign_export_enum_override'/3:
typeclass_test_13.m:038:   error: the typeclass constraint
typeclass_test_13.m:038:     [38;5;87m`typeclass_test_13.output(U)'[39;49m
typeclass_test_13.m:038:   is [38;5;203munsatisfiable.[39;49m
typeclass_test_13.m:039: In clause for predicate
typeclass_test_13.m:039:   `mercury_format_pragma_foreign_export_enum_override'/3:
typeclass_test_13.m:039:   error: the typeclass constraint
typeclass_test_13.m:039:     [38;5;87m`typeclass_test_13.output(U)'[39;49m
typeclass_test_13.m:039:   is [38;5;203munsatisfiable.[39;49m
